<resources>
    <string name="app_name">RetailDost</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="password">Password</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="Signin">Sign In</string>
    <string name="or">Or</string>
    <string name="newuser">New User | Sign Up</string>
    <string name="alreadyhaveaccount">Already have an account !</string>
    <string name="email">Email Id</string>
    <string name="name">Name</string>
    <string name="fullname">Full name*</string>
    <string name="createpassword">Password( 7 or more characters )</string>
    <string name="signup">Sign Up</string>
    <string name="dontworry">Don\'t worry we just need your registered email address and it\'s done!</string>
    <string name="resetpass">Reset Password</string>
    <string name="checkemail">Check your Inbox after clicking the button above.</string>
    <string name="goback"><![CDATA[<< Go Back]]></string>
    <string name="Recovery">Recovery email sent Successfully!  Check your Inbox.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_amount">Total Amount</string>
    <string name="contine">Continue</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="change_or_add_new_address">Change or Add new Address</string>
    <string name="city">City</string>


    <string-array name="india_states">
        <item>Bokaro</item>
        <item>Chatra</item>
        <item>Deoghar</item>
        <item>Dhanbad</item>
        <item>Dumka</item>
        <item>East Singhbhum</item>
        <item>Garhwa</item>
        <item>Giridih</item>
        <item>Godda</item>
        <item>Gumla</item>
        <item>Hazaribag</item>
        <item>Jamtara</item>
        <item>Khunti</item>
        <item>Koderma</item>
        <item>Latehar</item>
        <item>Lohardaga</item>
        <item>Pakur</item>
        <item>Palamu</item>
        <item>Ramgarh</item>
        <item>Ranchi</item>
        <item>Sahibganj</item>
        <item>Seraikela-Kharsawan</item>
        <item>Simdega</item>
        <item>West Singhbhum</item>
    </string-array>
    <string name="title_activity_user_id">UserIdActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="jharkhand">Jharkhand</string>
</resources>